--- a/package.json
+++ b/package.json
@@ -20,37 +20,37 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^5.0.6",
-    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "babel-plugin-react-compiler": "^19.0.0-beta-df7b47d-20241124",
     "clsx": "^2.1.1",
     "eslint-plugin-react-compiler": "^19.0.0-beta-df7b47d-20241124",
-    "expo": "~52.0.17",
-    "expo-blur": "~14.0.1",
+    "expo": "^53.0.9",
+    "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.3",
-    "expo-crypto": "^14.0.1",
-    "expo-dev-client": "~5.0.5",
+    "expo-crypto": "~14.0.2",
+    "expo-dev-client": "~5.0.20",
     "expo-font": "~13.0.1",
-    "expo-haptics": "~14.0.0",
-    "expo-linking": "~7.0.3",
-    "expo-router": "~4.0.11",
-    "expo-splash-screen": "~0.29.15",
-    "expo-sqlite": "~15.0.3",
-    "expo-status-bar": "~2.0.0",
-    "expo-symbols": "~0.2.0",
-    "expo-system-ui": "~4.0.5",
-    "expo-web-browser": "~14.0.1",
+    "expo-haptics": "~14.0.1",
+    "expo-linking": "~7.0.5",
+    "expo-router": "~4.0.21",
+    "expo-splash-screen": "~0.29.24",
+    "expo-sqlite": "~15.1.4",
+    "expo-status-bar": "~2.0.1",
+    "expo-symbols": "~0.2.2",
+    "expo-system-ui": "~4.0.9",
+    "expo-web-browser": "~14.0.2",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-compiler-runtime": "^19.0.0-beta-df7b47d-20241124",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.54.2",
-    "react-native": "0.76.3",
+    "react-native": "0.76.9",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
+    "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "reanimated-color-picker": "^3.0.6",
@@ -65,7 +65,7 @@
     "eslint": "^8.57.0",
     "eslint-config-expo": "~8.0.1",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.2",
+    "jest-expo": "~52.0.6",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
