--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-native": "0.79.2",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-keyboard-controller": "^1.17.1",
+    "react-native-pager-view": "6.7.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
@@ -58,7 +59,7 @@
     "reanimated-color-picker": "^3.0.6",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.16",
-    "react-native-pager-view": "6.7.1"
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
