✨ feat(core): added logos and splash

--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
 		"slug": "keep-track",
 		"version": "1.0.0",
 		"orientation": "portrait",
-		"icon": "./assets/images/icon.png",
+		"icon": "./assets/images/keep-track-logo.png",
 		"scheme": "myapp",
 		"userInterfaceStyle": "automatic",
 		"newArchEnabled": true,
@@ -31,10 +31,16 @@
 			[
 				"expo-splash-screen",
 				{
-					"image": "./assets/images/splash-icon.png",
+					"image": "./assets/images/splash-light.png",
 					"imageWidth": 200,
 					"resizeMode": "contain",
-					"backgroundColor": "#ffffff"
+					"backgroundColor": "#ffffff",
+					"dark": {
+						"image": "./assets/images/splash-dark.png",
+						"imageWidth": 200,
+						"resizeMode": "contain",
+						"backgroundColor": "#192328"
+					}
 				}
 			],
 			"expo-sqlite"
